--- a/community.html
+++ b/community.html
@@ -202,7 +202,7 @@
             <div class="sponsorBox">
                 <div class="communityTitle">KUNG FU TEA VANCOUVER</div>
                 <div class="communityPic">
-                    <img src="media/pokay.png" alt="pokay" class="sponsorImg">
+                    <img src="media/kungfutea.jpeg" alt="kungfutea" class="sponsorImg">
                 </div>
                 <p>Boba for days? Yes please!</p>
 
@@ -216,7 +216,7 @@
             <div class="sponsorBox">
                 <div class="communityTitle">BAODOWN UBC</div>
                 <div class="communityPic">
-                    <img src="media/pokay.png" alt="pokay" class="sponsorImg">
+                    <img src="media/baodown.jpeg" alt="baodown" class="sponsorImg">
                 </div>
 
                 <p> GISAU members can now get a 10% off in Bao Down (UBC location only)! Get your hands on
