Bolding sponsor discount (Baodown)

--- a/community.html
+++ b/community.html
@@ -219,7 +219,7 @@
                     <img src="media/baodown.jpeg" alt="baodown" class="sponsorImg">
                 </div>
 
-                <p> GISAU members can now get a 10% off in Bao Down (UBC location only)! Get your hands on
+                <p> GISAU members can now get a <b>10% off</b> in Bao Down (UBC location only)! Get your hands on
                     some mouth-watering flavours and spices of the Orient with fresh vegetables and proteins of
                     the Pacific Northwest. They’ve got signature steamed baos, Asian rice and noodles menu, even
                     sharing plates and plant-based options! Plus, they also have a HAPPY HOUR EVERYDAY from
