Updated Teams Page Fixed syntax error at .whoTextMobile Closed a few unclosed <a> elements at index.html

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
                     <h1>SOCIAL + FOOD</h1>
                     <div class="container">
                         <div>
-                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal"><img class="eventIcon" src="media/event-icon.png">
+                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal"></a><img class="eventIcon" src="media/event-icon.png">
                         </div>
                         <div class="overlay">
-                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal"><img class="eventIcon" src="media/eventbutton.png">
+                            <a href="https://www.facebook.com/pg/gisaubc/events/?ref=page_internal"></a><img class="eventIcon" src="media/eventbutton.png">
                         </div>
                     </div>
                     <div class="eventDesc">
@@ -153,10 +153,10 @@
                     <h1>RANTANGAN</h1>
                     <div class="container">
                         <div>
-                            <a href="https://www.facebook.com/events/1000405170137037/"><img class="eventIcon" src="media/food-icon.png">
+                            <a href="https://www.facebook.com/events/1000405170137037/"></a><img class="eventIcon" src="media/food-icon.png">
                         </div>
                         <div class="overlay">
-                            <a href="https://www.facebook.com/events/1000405170137037/"><img class="eventIcon" src="media/foodbutton.png">
+                            <a href="https://www.facebook.com/events/1000405170137037/"></a><img class="eventIcon" src="media/foodbutton.png">
                         </div>
                     </div>
                     <div class="eventDesc">
@@ -169,10 +169,10 @@
                     <h1>PERKS</h1>
                     <div class="container">
                         <div>
-                            <a href="community.html"><img class="eventIcon" src="media/perk-icon.png">
+                            <a href="community.html"></a><img class="eventIcon" src="media/perk-icon.png">
                         </div>
                         <div class="overlay">
-                            <a href="community.html"><img class="eventIcon" src="media/perkbutton.png">
+                            <a href="community.html"></a><img class="eventIcon" src="media/perkbutton.png">
                         </div>
                     </div>
                     <div class="eventDesc">
