--- a/team.html
+++ b/team.html
@@ -59,85 +59,85 @@
     <div class="container">
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/garry.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20nathan.jpg" alt="portrait" class="portrait">
+                <!-- <div class="overlay">
                     <img src="membergif/garry.gif" class="portraitgif">
-                </div>
+                </div> -->
             </div>
             <span class="teamTitle">President</span>
-            <span class="teamText">Garry Bedi</span>
+            <span class="teamText">Nathan Gunawan</span>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/shad.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20andrew.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/shad.gif" class="portraitgif">
-                </div>
+                </div> -->
             </div>
             <div class="teamTitle">Vice President</div>
-            <div class="teamText">Shadrina Wicaksono</div>
+            <div class="teamText">Andrew Suwardi</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/elaine.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20elaine.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/elaine.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Treasurer</div>
             <div class="teamText">Elaine Kojongian</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/tania.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20nadya.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/tania.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Secretary</div>
-            <div class="teamText">Tania Suradja</div>
+            <div class="teamText">Nadya Tan</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/kenny.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20shad.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/kenny.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Outreach Director</div>
-            <div class="teamText">Kenny Ponto</div>
+            <div class="teamText">Shadrina Wicaksono</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/richard.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20ira.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/richard.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Events Director</div>
-            <div class="teamText">Richard Setiadi</div>
+            <div class="teamText">Levina Ira</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/gala.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20arian.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/gala.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Events Coordinator</div>
-            <div class="teamText">Gala Bahagia</div>
+            <div class="teamText">Alexander Arian</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/henry.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20chloe.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/henry.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Events Coordinator</div>
-            <div class="teamText">Henry Japardi</div>
+            <div class="teamText">Chloe Lin</div>
         </div>
-        <div class="teamBox">
+        <!-- <div class="teamBox">
             <div class="teamPic">
                 <img src="memberpic/ira.png" alt="portrait" class="portrait">
                 <div class="overlay">
@@ -146,156 +146,146 @@
             </div>
             <div class="teamTitle">Events Coordinator</div>
             <div class="teamText">Levina Ira</div>
-        </div>
+        </div> -->
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/andrew.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20henry.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/andrew.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Logistics Director</div>
-            <div class="teamText">Andrew Suwardi</div>
+            <div class="teamText">Henry Japardi</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/josh.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20charlotte.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/josh.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Logistics Coordinator</div>
-            <div class="teamText">Joshua Limanto</div>
+            <div class="teamText">Charlotte Lin</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/leo.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20sharon.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/leo.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Food & Beverage Director</div>
-            <div class="teamText">Leonardo Nawingga</div>
-        </div>
-        <div class="teamBox">
-            <div class="teamPic">
-                <img src="memberpic/sung.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/sung.gif" class="portraitgif">
-                </div>
-            </div>
-            <div class="teamTitle1">Food & Beverage Coordinator</div>
-            <div class="teamText">Sung Hyuk Choe</div>
-        </div>
-        <div class="teamBox">
-            <div class="teamPic">
-                <img src="memberpic/sharon.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/sharon.gif" class="portraitgif">
-                </div>
-            </div>
-            <div class="teamTitle1">Food & Beverage Coordinator</div>
             <div class="teamText">Sharon Rosalind</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/sheila.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/sheila.gif" class="portraitgif">
-                </div>
+                <img src="memberpic/photo%20brandon.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
+                    <img src="membergif/sung.gif" class="portraitgif">
+                </div>-->
             </div>
-            <div class="teamTitle">Marketing Director</div>
-            <div class="teamText">Sheila Pribadi</div>
+            <div class="teamTitle1">Food & Beverage Coordinator</div>
+            <div class="teamText">Brandon Sumarno</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/jessica.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/jessica.gif" class="portraitgif">
-                </div>
+                <img src="memberpic/photo%20elissa.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
+                    <img src="membergif/sharon.gif" class="portraitgif">
+                </div>-->
             </div>
-            <div class="teamTitle">Public Relation Coordinator</div>
+            <div class="teamTitle1">Food & Beverage Coordinator</div>
+            <div class="teamText">Elissa Soendjaja</div>
+        </div>
+        <div class="teamBox">
+            <div class="teamPic">
+                <img src="memberpic/photo%20jess.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
+                    <img src="membergif/sheila.gif" class="portraitgif">
+                </div>-->
+            </div>
+            <div class="teamTitle">Marketing Director</div>
             <div class="teamText">Jessica Leony</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/kendra.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20wilson.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
+                    <img src="membergif/jessica.gif" class="portraitgif">
+                </div>-->
+            </div>
+            <div class="teamTitle">Public Relation Coordinator</div>
+            <div class="teamText">Wilson Ivandy</div>
+        </div>
+        <div class="teamBox">
+            <div class="teamPic">
+                <img src="memberpic/photo%20tania.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/kendra.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Visual Media Director</div>
-            <div class="teamText">Kendra Arsadjaja</div>
+            <div class="teamText">Tania Suradja</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/nathan.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20chris.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/nathan.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Visual Media Coordinator</div>
-            <div class="teamText">Nathan Gunawan</div>
+            <div class="teamText">Christopher Mulya</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/aji.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20celine.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/aji.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
-            <div class="teamTitle">Sponsorship Director</div>
-            <div class="teamText">Aji Pratama Putra</div>
+            <div class="teamTitle">Corporate Relations Director</div>
+            <div class="teamText">Celine Olivia</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/ryan.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20jeff.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/ryan.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Sponsorship Coordinator</div>
-            <div class="teamText">Ryan Muhartono</div>
+            <div class="teamText">Mark Jefferson</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/nadya.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/nadya.gif" class="portraitgif">
-                </div>
-            </div>
-            <div class="teamTitle">Sponsorship Coordinator</div>
-            <div class="teamText">Nadya Tan</div>
-        </div>
-        <div class="teamBox">
-            <div class="teamPic">
-                <img src="memberpic/jodi.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20joss.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/jodi.gif" class="portraitgif">
-                </div>
-            </div>
-            <div class="teamTitle">Webmaster</div>
-            <div class="teamText">Jodi Gunawan</div>
-        </div>
-        <div class="teamBox">
-            <div class="teamPic">
-                <img src="memberpic/jossoey.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/jossoey.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">Webmaster</div>
             <div class="teamText">Theodorus Jossoey</div>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/celine.png" alt="portrait" class="portrait">
-                <div class="overlay">
+                <img src="memberpic/photo%20shieh.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
+                    <img src="membergif/jossoey.gif" class="portraitgif">
+                </div>-->
+            </div>
+            <div class="teamTitle">Webmaster</div>
+            <div class="teamText">Andrew Shieh</div>
+        </div>
+        <div class="teamBox">
+            <div class="teamPic">
+                <img src="memberpic/photo%20belinda.jpg" alt="portrait" class="portrait">
+                <!--<div class="overlay">
                     <img src="membergif/celine.gif" class="portraitgif">
-                </div>
+                </div>-->
             </div>
             <div class="teamTitle">First-year Representative</div>
-            <div class="teamText">Celine Nugraha</div>
+            <div class="teamText">Belinda Suhardy</div>
         </div>
     </div>
 </div>
