Created new folder for old memberpic Done overlay (TODO: change the year texts)

--- a/team.html
+++ b/team.html
@@ -59,18 +59,20 @@
     <div class="container">
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20nathan.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/nathan.jpg" alt="portrait" class="portrait">
                  <div class="overlay">
-                     <div class="teamText">Nathan Gunawan </div>
+                     <div class="teamText">Nathan Gunawan</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <span class="teamTitle">President</span>
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20andrew.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/andrew.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Andrew Suwardi
+                    <div class="teamText">Andrew Suwardi</div>
+                    <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Vice President</div>
@@ -78,9 +80,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20elaine.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/elaine.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Elaine Kojongian</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Treasurer</div>
@@ -88,9 +91,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20nadya.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/nadya.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Nadya Tan</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Secretary</div>
@@ -98,9 +102,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20shad.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/shad.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Shadrina Wicaksono</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Outreach Director</div>
@@ -108,9 +113,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20ira.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/ira.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Levina Ira</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Events Director</div>
@@ -118,9 +124,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20arian.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/arian.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Alexander Arian</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Events Coordinator</div>
@@ -128,29 +135,21 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20chloe.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/chloe.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Chloe Lin</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Events Coordinator</div>
             
         </div>
-        <!-- <div class="teamBox">
-            <div class="teamPic">
-                <img src="memberpic/ira.png" alt="portrait" class="portrait">
-                <div class="overlay">
-                    <img src="membergif/ira.gif" class="portraitgif">
-                </div>
-            </div>
-            <div class="teamTitle">Events Coordinator</div>
-            
-        </div> -->
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20henry.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/henry.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Henry Japardi</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Logistics Director</div>
@@ -158,9 +157,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20charlotte.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/charlotte.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Charlotte Lin</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Logistics Coordinator</div>
@@ -168,9 +168,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20sharon.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/sharon.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Sharon Rosalind</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Director</div>
@@ -178,9 +179,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20brandon.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/brandon.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Brandon Sumarno</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Coordinator</div>
@@ -188,9 +190,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20elissa.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/elissa.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Elissa Soendjaja</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Coordinator</div>
@@ -198,9 +201,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20jess.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/jess.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Jessica Leony</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Marketing Director</div>
@@ -208,9 +212,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20wilson.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/wilson.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Wilson Ivandy</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Public Relation Coordinator</div>
@@ -218,9 +223,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20tania.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/tania.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Tania Suradja</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Visual Media Director</div>
@@ -228,9 +234,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20chris.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/chris.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Christopher Mulya</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Visual Media Coordinator</div>
@@ -238,9 +245,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20celine.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/celine.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Celine Olivia</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Corporate Relations Director</div>
@@ -248,9 +256,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20jeff.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/jeff.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Mark Jefferson</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Sponsorship Coordinator</div>
@@ -258,9 +267,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20joss.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/joss.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Theodorus Jossoey</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Webmaster</div>
@@ -268,9 +278,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20shieh.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/shieh.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Andrew Shieh</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Webmaster</div>
@@ -278,9 +289,10 @@
         </div>
         <div class="teamBox">
             <div class="teamPic">
-                <img src="memberpic/photo%20belinda.jpg" alt="portrait" class="portrait">
+                <img src="memberpic/belinda.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
-                    Nathan
+                    <div class="teamText">Belinda Suhardy</div>
+                     <div class="teamYear">3rd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">First-year Representative</div>
