--- a/team.html
+++ b/team.html
@@ -83,7 +83,7 @@
                 <img src="memberpic/elaine.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Elaine Kojongian</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">3rd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Treasurer</div>
@@ -94,7 +94,7 @@
                 <img src="memberpic/nadya.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Nadya Tan</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year Arts(lol)</div>
                 </div>
             </div>
             <div class="teamTitle">Secretary</div>
@@ -105,7 +105,7 @@
                 <img src="memberpic/shad.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Shadrina Wicaksono</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">5th Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Outreach Director</div>
@@ -116,7 +116,7 @@
                 <img src="memberpic/ira.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Levina Ira</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Events Director</div>
@@ -127,7 +127,7 @@
                 <img src="memberpic/arian.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Alexander Arian</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">1st Year APSC</div>
                 </div>
             </div>
             <div class="teamTitle">Events Coordinator</div>
@@ -138,7 +138,7 @@
                 <img src="memberpic/chloe.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Chloe Lin</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">1st Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Events Coordinator</div>
@@ -160,7 +160,7 @@
                 <img src="memberpic/charlotte.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Charlotte Lin</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Logistics Coordinator</div>
@@ -171,7 +171,7 @@
                 <img src="memberpic/sharon.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Sharon Rosalind</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">3rd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Director</div>
@@ -182,7 +182,7 @@
                 <img src="memberpic/brandon.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Brandon Sumarno</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year APSC</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Coordinator</div>
@@ -193,7 +193,7 @@
                 <img src="memberpic/elissa.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Elissa Soendjaja</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Coordinator</div>
@@ -204,7 +204,7 @@
                 <img src="memberpic/jess.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Jessica Leony</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">3rd Year APSC</div>
                 </div>
             </div>
             <div class="teamTitle">Marketing Director</div>
@@ -215,7 +215,7 @@
                 <img src="memberpic/wilson.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Wilson Ivandy</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">1st Year Science</div>
                 </div>
             </div>
             <div class="teamTitle">Public Relation Coordinator</div>
@@ -226,7 +226,7 @@
                 <img src="memberpic/tania.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Tania Suradja</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">3rd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Visual Media Director</div>
@@ -237,7 +237,7 @@
                 <img src="memberpic/chris.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Christopher Mulya</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Visual Media Coordinator</div>
@@ -248,7 +248,7 @@
                 <img src="memberpic/celine.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Celine Olivia</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year LFS</div>
                 </div>
             </div>
             <div class="teamTitle">Corporate Relations Director</div>
@@ -259,7 +259,7 @@
                 <img src="memberpic/jeff.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Mark Jefferson</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">Sponsorship Coordinator</div>
@@ -270,7 +270,7 @@
                 <img src="memberpic/joss.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Theodorus Jossoey</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">3rd Year Science</div>
                 </div>
             </div>
             <div class="teamTitle">Webmaster</div>
@@ -281,7 +281,7 @@
                 <img src="memberpic/shieh.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Andrew Shieh</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">2nd Year APSC</div>
                 </div>
             </div>
             <div class="teamTitle">Webmaster</div>
@@ -292,7 +292,7 @@
                 <img src="memberpic/belinda.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Belinda Suhardy</div>
-                     <div class="teamYear">3rd Year Sauder</div>
+                     <div class="teamYear">1st Year Sauder</div>
                 </div>
             </div>
             <div class="teamTitle">First-year Representative</div>
