Year text done(fixed typo)

--- a/team.html
+++ b/team.html
@@ -94,7 +94,7 @@
                 <img src="memberpic/nadya.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Nadya Tan</div>
-                     <div class="teamYear">2nd Year Arts(lol)</div>
+                     <div class="teamYear">2nd Year Arts</div>
                 </div>
             </div>
             <div class="teamTitle">Secretary</div>
