--- a/team.html
+++ b/team.html
@@ -127,7 +127,8 @@
                 <img src="memberpic/arian.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Alexander Arian</div>
-                     <div class="teamYear">1st Year APSC</div>
+                    <!-- Brandon suggest pake engineering, muat sih cba liat -->
+                     <div class="teamYear">1st Year Engineering</div>
                 </div>
             </div>
             <div class="teamTitle">Events Coordinator</div>
