bolded name, change apsc to engineering removed membergif

--- a/team.html
+++ b/team.html
@@ -183,7 +183,7 @@
                 <img src="memberpic/brandon.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Brandon Sumarno</div>
-                     <div class="teamYear">2nd Year APSC</div>
+                     <div class="teamYear">2nd Year Engineering</div>
                 </div>
             </div>
             <div class="teamTitle">Food & Beverage Coordinator</div>
@@ -205,7 +205,7 @@
                 <img src="memberpic/jess.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Jessica Leony</div>
-                     <div class="teamYear">3rd Year APSC</div>
+                     <div class="teamYear">3rd Year Engineering</div>
                 </div>
             </div>
             <div class="teamTitle">Marketing Director</div>
@@ -282,7 +282,7 @@
                 <img src="memberpic/shieh.jpg" alt="portrait" class="portrait">
                 <div class="overlay">
                     <div class="teamText">Andrew Shieh</div>
-                     <div class="teamYear">2nd Year APSC</div>
+                     <div class="teamYear">2nd Year Engineering</div>
                 </div>
             </div>
             <div class="teamTitle">Webmaster</div>
