Changed sponsor kumme cafe link to instagram link

--- a/community.html
+++ b/community.html
@@ -181,7 +181,7 @@
                     their house special cakes, and their healthy (yes, healthy) fresh fruit bubble tea, ice cream and
                     other refreshments!</p>
 
-                <p><a href="https://www.kummecafe.com/">Visit KUMME CAFÉ here</a></p>
+                <p><a href="https://www.instagram.com/kummecafe.media/">Visit KUMME CAFÉ Instagram here</a></p>
             </div>
 
             <div class="sponsorBox">
